Event handling with Kafka integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 services:
+  kafka:
+    image: apache/kafka:latest
+    ports:
+      - "9092:9092"
   postgres:
     image: postgres:13.3
     environment:
