feat: enhance Kafka consumer with worker pool

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+HOOKIFY_ENV=development
+
 HOOKIFY_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/hookify?sslmode=disable
 
 POSTGRES_DB=hookify
@@ -7,5 +9,7 @@ POSTGRES_PASSWORD=postgres
 HOOKIFY_KAFKA_BROKERS=localhost:9092
 HOOKIFY_KAFKA_TOPIC=webhook.events.raw
 HOOKIFY_KAFKA_GROUP_ID=hookify-consumer-1
+
+HOOKIFY_CONSUMER_WORKERS=5
 
 HOOKIFY_GRPC_PORT=50051
